--- a/getinfo/Cargo.toml
+++ b/getinfo/Cargo.toml
@@ -8,5 +8,13 @@ edition = "2021"
 [dependencies]
 bytes = "1.5.0"
 futures = "0.3.29"
-tokio = { version = "1.34.0", features = ["full"] }
+tokio = { version = "1.33.0", features = ["full"] }
 tokio-util = { version = "0.7.10", features = ["full"] }
+
+[[bin]]
+name = "server"
+path = "src/server.rs"
+
+[[bin]]
+name = "client"
+path = "src/client.rs"
